# omnigrid

./: .env.phase37.example  .gitignore  40D_HYPERCUBE_TECHNICAL_SPEC.md  AUDIT_LOOP_TECHNICAL.md  AUDIT_SUMMARY.md  AUTOMATION_AUDIT_REPORT.md  BAOBAB_PROTECTION.md  BRAND_DASHBOARD_RESEARCH.md  CHANGELOG.md  CLAUDE_IMPORT_README.md  CODENEST_DEEP_DIVE.md  CONSOLIDATION_MASTER_GUIDE.md  ECOSYSTEM_AUTOMATION_README.md  ECOSYSTEM_CONSOLIDATION_PR.md  ECOSYSTEM_HOLOREPORT_COMPLETE.md  ECOSYSTEM_README.md  ECOSYSTEM_VISUAL_FLOW.md  ETERNAL_ENGINE_SUMMARY.md  FRUITFULPLANETCHANGE_CODE_REVIEW_FINAL.md  HEATMAP.md  HEYNS_ECOSYSTEM_COMPLETE_ARCHITECTURE.md  HOTSTACK_ECOSYSTEM_CONSOLIDATION.md  INTEGRATION_COMPLETE.md  INTERSTELLAR_ECOSYSTEM_MASTER.md  IP_SWEEP_SECURITY.md  MARKEN_PROTOCOL_REGENERATIVE_EMPLOYMENT.md  MARKETPLACE_COMPLETION_CHECKLIST.md  MARKETPLACE_RESEARCH_SUMMARY.md  MARKETPLACE_RESEARCH_ULTIMATE.md  OMNIGRID_TOTAL_ARCHITECTURE.md  ONE_GRID_TIEKIEBOKS.json  ORACLE_IMPLEMENTATION_SUMMARY.md  PHASE38_CHANGELOG.md  PHASE38_QUICKSTART.md  PHASE38_SUMMARY.txt  PHASE_2_IMPLEMENTATION.md  PHASE_36_QUANTUM_DASHBOARD.md  PHASE_40_IMPLEMENTATION.md  PHASE_43_IMPLEMENTATION.md  PR36_IMPLEMENTATION_SUMMARY.md  (+73 more)
fruitful-global-deployment/: .env.example  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .replit  .vercelignore  ARCHITECTURE.md  BUILD_SECURITY_AUDIT_REPORT.md  CODENEST_PRODUCTION_ARCHITECTURE_ANALYSIS.md  DASHBOARD_ROUTES_VISUALIZATION.html  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  ECOSYSTEM_PULSE_IMPLEMENTATION.md  EXECUTIVE_SUMMARY.md  FAA_ZONE_RESEARCH.md  (+74 more)
(+936 files in other folders)
